# Payment/src/api/cmd/api/main.go
@@ -20,7 +20,6 @@ import (
 // @description API for managing payments
 // @host reiner.gg
 // @BasePath /
-
 func main() {
 	MONGO_URI := util.Getenv("MONGO_URI", "mongodb://db-payment:27017")
 	PORT := fmt.Sprintf(":%s", util.Getenv("PORT", "3000"))
@@ -43,7 +42,7 @@ func main() {
 	))
 
 	mux.HandleFunc("GET /health", handlers.HealthCheck)
-	mux.HandleFunc("GET /users/{username}/payments", handlers.GetPayments)
+	mux.HandleFunc("GET /accounts/{user_id}/payments", handlers.GetPayments)
 	mux.HandleFunc("GET /payments/{id}", handlers.GetPayment)
 	mux.HandleFunc("POST /payments", handlers.CreatePayment)
 
